update compile-testing dep